--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
-    "gulp-notify": "^2.0.1",
+    "gulp-coffeelint": "^0.4.0",
+    "gulp-load-plugins": "^0.7.1",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1"
   }
 }
